--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
-
-  flutter_gemini_sdk:
-    path: ../flutter_gemini_sdk
-
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_chat_types: ^3.6.2
   flutter_chat_ui: ^1.6.15
+  flutter_gemini_sdk:
+    path: ../flutter_gemini_sdk
   flutter_riverpod: ^2.6.1
   go_router: ^15.0.0
   image_picker: ^1.1.2
@@ -45,11 +44,6 @@ dependencies:
   uuid: ^4.5.1
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
   flutter_lints: ^5.0.0
