--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
-  flutter_chat_types: ^3.6.2
-  flutter_chat_ui: ^1.6.15
   flutter_gemini_sdk:
     path: ../flutter_gemini_sdk
+
+  flutter_chat_types: ^3.6.2
+  flutter_chat_ui: ^1.6.15
   flutter_riverpod: ^2.6.1
   go_router: ^15.0.0
   image_picker: ^1.1.2
@@ -51,6 +52,7 @@ dev_dependencies:
     sdk: flutter
   riverpod_generator: ^2.6.5
   riverpod_lint: ^2.6.5
+  riverpod_test: ^0.1.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
