--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   uuid: ^4.5.1
+  intl:
 
 dev_dependencies:
   build_runner: ^2.4.15
