--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
-  dio: ^5.8.0+1
   flutter:
+    sdk: flutter
+
+  flutter_localizations:
     sdk: flutter
 
   ai_chat_dart_sdk:
     path: ../ai_chat_dart_sdk
 
+  dio: ^5.8.0+1
   flutter_chat_types: ^3.6.2
   flutter_chat_ui: ^1.6.15
   flutter_dotenv: ^5.2.1
@@ -61,9 +64,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  generate: true
   uses-material-design: true
   assets:
     - .env
